음성안내 작업 / 카메라 상단 툴바 작업

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="mode_basic">기본 모드</string>
     <string name="mode_basic_hint">고대비, 음성안내</string>
     <string name="mode_non">비시각장애인 모드</string>
+    <string name="guide_tts">화면 위쪽을 터치하면 시작합니다</string>
 
 </resources>
